fixes stuff and adds staging stuff.

--- a/DevOps2/Views/Home/Index.cshtml
+++ b/DevOps2/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-   <div> Version 2</div>
+   <div> Version 2 - staging</div>
 </div>
